--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,9 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="unlock_title">Unlock</string>
+    <string name="add_to_favorites">Add To Favorites</string>
+    <string name="adfavor">Add to Favorites</string>
+    <string name="remove_from_favorites">Remove from Favorites</string>
+    <string name="pin">PIN</string>
 
 </resources>
