--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,8 @@
     <string name="pin_number">PIN Number</string>
     <string name="settings">Settings</string>
     <string name="security">Security</string>
+    <string name="genres">Genres</string>
+    <string name="schedule">Schedule</string>
+    <string name="summary">Summary</string>
 
 </resources>
